00-master-node/11-kubernetes-ingress-lab/04-NGINX-OSS-Mergeable-Ingress-Type-with-Auth/03-lab-4-cafe-namespace-ingress-master-mergeable-ingress-type.yaml
#cafe-app-master as nginx mergeable-ingress-type
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cafe-ingress-master
  namespace: nginx-ingress
  annotations:
    nginx.org/mergeable-ingress-type: "master" # For NGINX Plus Ingress
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - cafe.mashlab.com
    secretName: cafe-secret-namespace
  rules:
  - host: cafe.mashlab.com
