00-master-node/11-kubernetes-ingress-lab/04-NGINX-OSS-Mergeable-Ingress-Type-with-Auth/05-lab-4-cafe-namespace-ingress-tea-minion-mergeable-ingress-type.yaml
#tea-minion as nginx mergeable-ingress-type with basic authentication
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cafe-ingress-tea-minion
  annotations:
    nginx.org/mergeable-ingress-type: "minion"
    nginx.org/basic-auth-secret: "tea-passwd"
    nginx.org/basic-auth-realm: "Tea"
spec:
  rules:
  - host: cafe.mashlab.com
    http:
      paths:
      - path: /tea
        pathType: Prefix
        backend:
          service:
            name: tea-svc
            port:
